--- a/kadai_005/html/kadai_005.html
+++ b/kadai_005/html/kadai_005.html
@@ -9,7 +9,7 @@
     <br>
     <p>私は中学時代にサッカーを始めました。</p>
     <p>現在はサッカーのコーチとして活動をして、趣味のサッカーを楽しんでいます。</p>
-    <img src="/images/sample.jpg">
+    <img src="images/sample.jpg">
     <br>
     <a href="https:twitter.com/samuraijyuku">私のプロフィールはこちら</a>
   </body>
