説明文を追加した

--- a/kadai_005/html/kadai_005.html
+++ b/kadai_005/html/kadai_005.html
@@ -3,6 +3,7 @@
   <head>
     <meta carset="utf-8">
     <title>自己紹介</title>
+    <meta name="description" content="このページは5章の課題です。">
   </head>
   <body>
     <h1>私の趣味</h1>
