--- a/kadai_005/html/kadai_005.html
+++ b/kadai_005/html/kadai_005.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta carset="utf-8">
-    <title>自己紹介</title>
+    <title>5章課題</title>
     <meta name="description" content="このページは5章の課題です。">
   </head>
   <body>
