文字の大きさを修正

--- a/kadai_014/kadai_014.html
+++ b/kadai_014/kadai_014.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="style.css">
   </head>
   <body>
-    <div class="parent">
+    <div id="parent">
       <h1><span id="m-pink">M</span>Y<span id="p-blue">P</span>ROFILE</h1>
       <h2 class="pink">名前</h2>
       <p class="child">侍太郎</p>
