--- a/kadai_014/kadai_014.html
+++ b/kadai_014/kadai_014.html
@@ -7,20 +7,22 @@
     <link rel="stylesheet" href="style.css">
   </head>
   <body>
-    <div id="parent">
-      <h1><span id="m-pink">M</span>Y<span id="p-blue">P</span>ROFILE</h1>
-      <h2 class="pink">名前</h2>
-      <p class="child">侍太郎</p>
-      <h2 class="blue">生年月日</h2>
-      <p class="child">1990年1月1日</p>
-      <h2 class="pink">血液型</h2>
-      <p class="child">О型</p>
-      <h2 class="blue">趣味</h2>
-      <p>旅行、読書、ゲーム</p>
-      <h2 class="pink">好きな食べもの</h2>
-      <p>ハンバーグ、きつねうどん、抹茶アイス</p>
-      <h2 class="blue">プログラミングを始めた理由</h2>
-      <p>プログラマーとして転職したいから。<br>転職して数年後にはフリーランスになって、旅行しながら仕事したい！</p>
-　  </div>
+    <div id="profile">
+      <div id="parent">
+        <h1><span id="m-pink">M</span>Y<span id="p-blue">P</span>ROFILE</h1>
+        <h2 class="pink">名前</h2>
+        <p>侍太郎</p>
+        <h2 class="blue">生年月日</h2>
+        <p>1990年1月1日</p>
+        <h2 class="pink">血液型</h2>
+        <p>О型</p>
+      </div>
+        <h2 class="blue">趣味</h2>
+        <p>旅行、読書、ゲーム</p>
+        <h2 class="pink">好きな食べもの</h2>
+        <p>ハンバーグ、きつねうどん、抹茶アイス</p>
+        <h2 class="blue">プログラミングを始めた理由</h2>
+        <p>プログラマーとして転職したいから。<br>転職して数年後にはフリーランスになって、旅行しながら仕事したい！</p>
+    </div>
   </body>
 </html>
